Oxidized dsv2